test/setup.ts
// Test setup file for Jest
// This file runs before each test file

// Set test timeout to 10 seconds
jest.setTimeout(10000);

// Mock console methods to reduce noise in tests
global.console = {
  ...console,
  // Uncomment to suppress console.log in tests
  // log: jest.fn(),
  // warn: jest.fn(),
  // error: jest.fn(),
}; 